<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:navGraph="@navigation/nav_graph">

    <androidx.cardview.widget.CardView
        android:id="@+id/tiptextViewCV2"
        android:layout_width="393dp"
        android:layout_height="598dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="692dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_love_cats"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/tipBTN"
                android:layout_width="436dp"
                android:layout_height="478dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ede9aab6043917b249a4aec7abc0ea5e"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toEndOf="@+id/textViewCV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.995" />

            <TextView
                android:id="@+id/textViewCV"
                android:layout_width="196dp"
                android:layout_height="133dp"
                android:rotationX="-19"
                android:rotationY="9"
                android:text="@string/textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.144" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="124dp"
                android:rotation="-32"
                android:text="@string/info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCV" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>